# geospatial_anomaly_detection

./: .gitignore  NMF.ipynb  data_extraction.ipynb  pyproject.toml
sentinel1_pipeline/processed/inambari_corridor/: 2022-03-02_inambari_corridor_VV_30m.tif  2022-03-14_inambari_corridor_VV_30m.tif  2022-03-26_inambari_corridor_VV_30m.tif  2022-04-07_inambari_corridor_VV_30m.tif  2022-04-19_inambari_corridor_VV_30m.tif  2022-05-01_inambari_corridor_VV_30m.tif  2022-05-13_inambari_corridor_VV_30m.tif  2022-05-25_inambari_corridor_VV_30m.tif  2022-06-06_inambari_corridor_VV_30m.tif  2022-06-18_inambari_corridor_VV_30m.tif  2022-06-30_inambari_corridor_VV_30m.tif  2022-07-12_inambari_corridor_VV_30m.tif  2022-07-24_inambari_corridor_VV_30m.tif  2022-08-05_inambari_corridor_VV_30m.tif  2022-08-17_inambari_corridor_VV_30m.tif  2022-08-29_inambari_corridor_VV_30m.tif  2022-09-10_inambari_corridor_VV_30m.tif  2022-09-22_inambari_corridor_VV_30m.tif  2022-10-04_inambari_corridor_VV_30m.tif  2022-10-16_inambari_corridor_VV_30m.tif  2022-10-28_inambari_corridor_VV_30m.tif  2022-11-09_inambari_corridor_VV_30m.tif  2022-11-21_inambari_corridor_VV_30m.tif  2022-12-03_inambari_corridor_VV_30m.tif  2022-12-15_inambari_corridor_VV_30m.tif  2022-12-27_inambari_corridor_VV_30m.tif  2023-01-08_inambari_corridor_VV_30m.tif  2023-01-20_inambari_corridor_VV_30m.tif  2023-02-01_inambari_corridor_VV_30m.tif  2023-02-13_inambari_corridor_VV_30m.tif  2023-02-25_inambari_corridor_VV_30m.tif  2023-03-09_inambari_corridor_VV_30m.tif  2023-03-21_inambari_corridor_VV_30m.tif  (+8 more)
