[project]
name = "final-sketch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2026.1.2",
    "datetime>=6.0",
    "matplotlib>=3.10.8",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "xarray>=2026.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
